2000-05-10  Dan Winship  <danw@helixcode.com>

	* camel-multipart.c (write_to_stream): fix a stupid typo. Thank
	you, C.

	* camel-mime-part.c (write_to_stream): don't ref the stream before
	wrapper a filter around it, since nothing will ever unref it.

2000-05-10  Christopher James Lahey  <clahey@helixcode.com>

	* Makefile.am: Added camel-types.h, camel-folder-pt-proxy.h, and
	camel-thread-proxy.h.

2000-05-09  Dan Winship  <danw@helixcode.com>

	* providers/sendmail/camel-sendmail-transport.c (_send_internal):
	Bleah. Can't fsync a pipe. As a quick kludge, just don't
	stream_flush it. The right fix will require bringing back
	stream_close though.

2000-05-09  Jeffrey Stedfast  <fejj@stampede.org>
	* camel-internet-address.[c,h]: Undid my changes (moved
	struct _address back into came-internet-address.c)
	* providers/smtp/camel-smtp-transport.c: (_send): changed
	from using it's own address manipulation (using struct _address)
	to using camel_internet_address_get(). Also some format changes
	to keep consistant with the rest of Camel

2000-05-09  Jeffrey Stedfast  <fejj@stampede.org>

	* camel-internet-address.[c,h]: Moved struct _address from
	camel-internet-address.c to camel-internet-address.h
	(hopefully this doesn't break anything...)
	* providers/smtp/camel-smtp-transport.c: (_send): now
	populates the recipient list with To, Cc, and Bcc addresses.
	Should now be able to use this module.

2000-05-09  Dan Winship  <danw@helixcode.com>

	* providers/mbox/camel-mbox-folder.c (mbox_get_message_by_uid):
	one more refcounting fix I missed before.

2000-05-08  Jeffrey Stedfast  <fejj@stampede.org>

	* providers/smtp/camel-smtp-transport.c: no longer frees memory it
	shouldn't, updated to reflect camel-stream changes involving
	CamelException (perhaps it should use a different CamelException
	variable than is passed to the camel smtp module?)

2000-05-08  Dan Winship  <danw@helixcode.com>

	* camel-stream.c (camel_stream_read, camel_stream_write,